19 Feb 2013 - 0.3 - Language capabilities
	Included aspell and english dictionary
	Included link-grammar checker (experimental)
	Added frame zoom of fonts (C-mousewheel)
	Now parses also user's own ~/.emacs
	Fixes to HTML editing mode
	Improved key bindings

22 Oct 2012 - 0.2 - Apple/OSX usability and updates
	Included NXHtml for HTML, PHP and CSS syntax
	Enabled semantic mode
	Added LUA syntax
	Added org to Freemind mindmap export
	Improvements for usability on Apple/OSX
	Updated org-mode to latest version

20 Feb 2012 - 0.1 - 3rd rewrite
	Previous rewrites had no ChangeLog.
	This entry marks the start of the third rewrite.
	This release includes a bundle for MacOSX
	powered by a collection of elisp configurations
	plus old stuff that we might or might not reuse.