@@ -1,5 +1,8 @@
 \#*
 .\#*
+*.dmg
+*.sha
+*.asc
 *~
 *.sh
 !autogen.sh
